hotfix#10: issue overflow-x: auto closed, it's a Chrome v.129 bug

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -389,16 +389,13 @@ svg path {
 }
 
 .service-mini-cards-scroll-area {
-  overflow-x: auto !important;
-  -webkit-overflow-scrolling: touch !important; /* Smooth scrolling for iOS */
-  white-space: nowrap; /* Prevents wrapping of child elements */
-  display: flex; /* Use flexbox for horizontal layout */
-  flex-wrap: nowrap; /* Prevent wrapping to new lines */
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
 }
 
 @media (max-width: 500px) {
   .service-mini-cards-scroll-area {
-    height: 140px !important;
-    width: 100vw !important;
+    overflow-x: scroll !important;
+    -webkit-overflow-scrolling: touch !important;
   }
 }
